<resources>
    <string name="app_name">Ellomix</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="send_button">SEND</string>
    <string name="followers_title">followers</string>
    <string name="following_title">following</string>
    <string name="posts_title">posts</string>
    <string name="facebook_app_id">714928195322801</string>
    <string name="cancel_login">Cancelled Login</string>
    <string name="error_login">Error at Login</string>
    <string name="logout">Logout of Facebook</string>
    <string name="compose">Compose</string>
    <string name="to_sender">To: </string>
    <string name="done">Done</string>
    <string name="add_friend">Add:</string>
    <string name="add">Add</string>
    <string name="add_music">Add music</string>
    <string name="group_playlists">Group playlists</string>
    <string name="search_song">Search song</string>
    <string name="skip">Skip</string>
    <string name="auth_failed">Authentication Failed</string>
<<<<<<< HEAD
    <string name="forgot_userinfo">Forgot Email or Password?</string>
    <string name="log_in">Login</string>
    <string name="register_text">Register</string>
    <string name="continue_text">Continue</string>
    <string name="genre_text">Genre</string>
    <string name="popular_artists_text">Popular Artists</string>
    <string name="populate_timeline_text">Populate Your Timeline</string>
    <string name="populate_timeline_two_text">Choose A Few Artists And Genres To Follow</string>
=======
    <string name="view_comments">View All Comments</string>
>>>>>>> 02097f7f91f8dc2768560042ed3aee8483b36988
    <plurals name="numberOfSongsAdded">
        <item quantity="one">%d song added.</item>
        <item quantity="other">%d songs added.</item>
    </plurals>
</resources>
