<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_populate_timeline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ellomix.android.ellomix.Activities.GenreActivity">
            <TextView
            android:id="@+id/editTextPopulate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/populate_timeline_text"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/editTextPopulateTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/populate_timeline_two_text"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="55dp" />

        <TextView
            android:id="@+id/textViewGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/genre_text"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="82dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/genre_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@id/friends_view"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textViewPopularArtists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/popular_artists_text"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="236dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_artist_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:layout_below="@id/friends_view"
            android:layout_marginTop="5dp">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/medium_redrectangle"
            android:text="@string/continue_text"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="@color/cardview_light_background"
            android:textColorLink="@color/login"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="421dp" />

    </LinearLayout>






























































