<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ellomix.android.ellomix.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_profile"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/posts_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/profile_image_view"
                    android:layout_toEndOf="@id/profile_image_view"
                    android:padding="10dp"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/posts_count_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:paddingBottom="10dp"
                        android:text="0" />

                    <TextView
                        android:id="@+id/posts_titles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/posts_title"
                        android:layout_below="@id/posts_count_text_view"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/followers_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/posts_layout"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/followers_count_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1 K"
                        android:layout_centerHorizontal="true"
                        android:paddingBottom="10dp"/>

                    <TextView
                        android:id="@+id/followers_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/followers_title"
                        android:layout_below="@id/followers_count_text_view"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/following_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/followers_layout"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/following_count_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:paddingBottom="10dp"
                        android:text="1 K"/>

                    <TextView
                        android:id="@+id/following_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/following_title"
                        android:layout_below="@id/following_count_text_view"
                        />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
